<resources>
    <string name="app_name">MIAPP</string>

    <string name="username_error">Username</string>
    <string name="password_error">Password</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ponercontraseña">Escribe tu contraseña</string>
    <string name="ponerusuario">Escribe tu usuario</string>
    <string name="poneremail">Escribe tu Email</string>
    <string name="dialog_message">Estas seguro de querer borrar éste usuario?</string>
    <string name="dialog_title">Confirmacion</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="cancel">Cancelar</string>
    <string name="basic_preference_file">miprimeraap.android.teaching.com.BASIC_PREFERENCE_FILE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
