<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:padding="4dp"
        android:textColor="@color/color"


        />
    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ponerusuario"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:padding="4dp"
        android:textColor="@color/color"


        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/poneremail"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:padding="4dp"
        android:textColor="@color/color"

        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/ponercontraseña"
        />

      <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:orientation="horizontal"
          >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Gender"/>
      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
          />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="M"/>
      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="F"/>
      </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:text="Save"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/color2"
            android:text="Close"
            />

    </LinearLayout>

</LinearLayout>